hphp/test/zend/good/ext/standard/tests/url/base64_encode_variation_001.php.expectf
*** Testing base64_encode() : usage variations ***

Arg value 0

Warning: base64_encode() expects parameter 1 to be string, integer given in %s/zend/good/ext/standard/tests/url/base64_encode_variation_001.php on line %d

Arg value 1

Warning: base64_encode() expects parameter 1 to be string, integer given in %s/zend/good/ext/standard/tests/url/base64_encode_variation_001.php on line %d

Arg value 12345

Warning: base64_encode() expects parameter 1 to be string, integer given in %s/zend/good/ext/standard/tests/url/base64_encode_variation_001.php on line %d

Arg value -2345

Warning: base64_encode() expects parameter 1 to be string, integer given in %s/zend/good/ext/standard/tests/url/base64_encode_variation_001.php on line %d

Arg value 10.5

Warning: base64_encode() expects parameter 1 to be string, double given in %s/zend/good/ext/standard/tests/url/base64_encode_variation_001.php on line %d

Arg value -10.5

Warning: base64_encode() expects parameter 1 to be string, double given in %s/zend/good/ext/standard/tests/url/base64_encode_variation_001.php on line %d

Arg value 101234567000

Warning: base64_encode() expects parameter 1 to be string, double given in %s/zend/good/ext/standard/tests/url/base64_encode_variation_001.php on line %d

Arg value 1.07654321E-9

Warning: base64_encode() expects parameter 1 to be string, double given in %s/zend/good/ext/standard/tests/url/base64_encode_variation_001.php on line %d

Arg value 0.5

Warning: base64_encode() expects parameter 1 to be string, double given in %s/zend/good/ext/standard/tests/url/base64_encode_variation_001.php on line %d

Arg value 

Warning: base64_encode() expects parameter 1 to be string, null given in %s/zend/good/ext/standard/tests/url/base64_encode_variation_001.php on line %d

Arg value 

Warning: base64_encode() expects parameter 1 to be string, null given in %s/zend/good/ext/standard/tests/url/base64_encode_variation_001.php on line %d

Arg value 1

Warning: base64_encode() expects parameter 1 to be string, boolean given in %s/zend/good/ext/standard/tests/url/base64_encode_variation_001.php on line %d

Arg value 

Warning: base64_encode() expects parameter 1 to be string, boolean given in %s/zend/good/ext/standard/tests/url/base64_encode_variation_001.php on line %d

Arg value 1

Warning: base64_encode() expects parameter 1 to be string, boolean given in %s/zend/good/ext/standard/tests/url/base64_encode_variation_001.php on line %d

Arg value 

Warning: base64_encode() expects parameter 1 to be string, boolean given in %s/zend/good/ext/standard/tests/url/base64_encode_variation_001.php on line %d

Arg value 
string(0) ""

Arg value 
string(0) ""
Error: 4096 - Object of class stdClass could not be converted to string, %s/zend/good/ext/standard/tests/url/base64_encode_variation_001.php(65)

Arg value 

Warning: base64_encode() expects parameter 1 to be string, object given in %s/zend/good/ext/standard/tests/url/base64_encode_variation_001.php on line %d
Done
